--- a/index.html
+++ b/index.html
@@ -3,64 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mydevloper blogs</title>
+    <title>My developer blogs</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body>
-    <div class="blog">
-      <h1>my first blog page</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident at
-        impedit saepe fuga veritatis distinctio perspiciatis assumenda! Facilis,
-        in laudantium.
-      </p>
-    </div>
-    <div class="blog">
-      <h1>my second blog page</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident at
-        impedit saepe fuga veritatis distinctio perspiciatis assumenda! Facilis,
-        in laudantium.
-      </p>
-    </div>
-    <div class="blog">
-      <h1>my third blog page</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident at
-        impedit saepe fuga veritatis distinctio perspiciatis assumenda! Facilis,
-        in laudantium.
-      </p>
-    </div>
-    <div class="blog">
-      <h1>my fourth blog page</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident at
-        impedit saepe fuga veritatis distinctio perspiciatis assumenda! Facilis,
-        in laudantium.
-      </p>
-    </div>
-    <div class="blog">
-      <h1>my fourth blog page</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident at
-        impedit saepe fuga veritatis distinctio perspiciatis assumenda! Facilis,
-        in laudantium.
-      </p>
-    </div>
-    <div class="blog">
-      <h1>my fourth blog page</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident at
-        impedit saepe fuga veritatis distinctio perspiciatis assumenda! Facilis,
-        in laudantium.
-      </p>
-    </div>
-    <div class="blog">
-      <h1>my fourth blog page</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident at
-        impedit saepe fuga veritatis distinctio perspiciatis assumenda! Facilis,
-        in laudantium.
-      </p>
-    </div>
+  <body class="open-sans-noormal">
+    <header class="header">
+      <nav class="contaner">
+        <h3 class="contents">Ma<span class="text-d">r</span>y</h3>
+        <ul class="content">
+          <li>
+            <a class="pri-text" href="https://www.youtube.com/">Portfolio</a>
+          </li>
+          <li><a class="pri-text" href="https://www.facebook.com/">Blog</a></li>
+          <li>
+            <a href="https://www.instagram.com/#reactivated"
+              ><button class="btn-primary">Hire Me</button></a
+            >
+          </li>
+        </ul>
+      </nav>
+
+      <div class="banner">
+        <div class="banner-content">
+          <h4 class="banner-greetings pri-text">Hi, I am</h4>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        <img class="banner-img" src="images/hardy.png" alt="" />
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
