--- a/index.html
+++ b/index.html
@@ -38,12 +38,227 @@
             he. Morning because as to society behaved moments.
           </p>
           <button class="btn-primary">Download CV</button>
-          <button class="btn-primary">Contact</button>
+          <button class="btn-primars">Contact</button>
         </div>
         <img class="banner-img" src="images/hardy.png" alt="" />
       </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section>
+        <div class="sections">
+          <h3 class="section-title">About Me</h3>
+          <p class="section-discription">
+            I, m a designer & developer with a passion for web design. I enjoy
+            developing simple, clean and slick websites that provide real value
+            to the end user. Thousands of clients have procured exceptional
+            resulfs while working with me. Delivering work within time and
+            budget which meets clients requirements in our mata.
+          </p>
+
+          <div class="section-about">
+            <div class="about-items">
+              <p class="about-title">Name:</p>
+              <p class="item-description">Mary Hardy</p>
+            </div>
+            <div class="about-items">
+              <p class="about-title">Email:</p>
+              <p class="item-description">info@gmail.com</p>
+            </div>
+            <div class="about-items">
+              <p class="about-title">Date of birth:</p>
+              <p class="item-description">1 November 1987</p>
+            </div>
+            <div class="about-items">
+              <p class="about-title">From:</p>
+              <p class="item-description">Los Angeles, USA</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="skills">
+        <div class="text-center">
+          <h3 class="skill-title">What I do</h3>
+          <p class="skill-discription">
+            I have more than 10 years experience building software for clients
+            all over the world. Below is a quick overview of my main technical
+            skill sets and technologies i use. Want to find out more about my
+            experience? Check out my online resume and project portfolio.
+          </p>
+        </div>
+
+        <div class="skill-contaners">
+          <div class="skill">
+            <img src="./images/icons/react.png" alt="" />
+            <h4 class="skill-titles">Vanilla JavaScript</h4>
+            <p class="skills-discriptions">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="./images/icons/mongo.png" alt="" />
+            <h4 class="skill-titles">React</h4>
+            <p class="skills-discriptions">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="./images/icons/nodejs.png" alt="" />
+            <h4 class="skill-titles">Node.js</h4>
+            <p class="skills-discriptions">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="./images/icons/js.png" alt="" />
+            <h4 class="skill-titles">MongoDB</h4>
+            <p class="skills-discriptions">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="summary">
+        <h3 class="resume-title">A summary of My Resume</h3>
+        <!-- .summary-column*2>h3.summary-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experince-discription -->
+        <div class="summary-section">
+          <div class="summary-column">
+            <h3 class="summary-column-title">My Education</h3>
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experince-discription">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experince-discription">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experince-discription">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+          </div>
+          <div class="summary-column">
+            <h3 class="summary-column-title">My Education</h3>
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experince-discription">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experince-discription">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experince-discription">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="resumy-buttom">
+          <button class="btn-primary">Download CV</button>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-contaner">
+        <div class="footers-1">
+          <div class="footer">
+            <h3 class="foot-titele">Lets Connect</h3>
+            <p class="foot-discription">
+              Please fill out the form on this section to contact with me or
+              call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+            </p>
+
+            <div class="footer-icon">
+              <img src="./images/icons/facebook.png" alt="" />
+              <img src="./images/icons/insta.png" alt="" />
+              <img src="./images/icons/twitter.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="footres-2">
+          <h3 class="message-title">Let’s Message me</h3>
+          <div class="sdifg">
+            <input
+              class="title-7"
+              type="text"
+              name=""
+              id=""
+              placeholder="Your name"
+            />
+            <br />
+            <input
+              class="title-8"
+              type="email"
+              name=""
+              id=""
+              placeholder="Your email"
+            />
+            <textarea
+              class="title-9"
+              cols="20"
+              rows="3"
+              name=""
+              id=""
+              placeholder="Message"
+            ></textarea>
+          </div>
+          <br />
+          <input class="btn-primary title-10" type="submit" value="Submit" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
